@@ -1,5 +1,8 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+11/20/13: In eTomo - Serial Sections, fixed the Newstack progress bar.
+(Bug# 1749)
+
 11/20/13: Fixed 3dmod crash from loading many files through startup window.
 
 11/19/13: Made multi-line INFO and WARNING messages more parsable in
@@ -9,6 +12,9 @@ etomo_err.log.(Bug# 1694)
 the Combine dialog is opened too early.(Bug# 1652)
 
 11/19/13: In uitest, fixed a problem with finding the main panel.(Bug# 1761)
+
+11/18/13: In eTomo made multi-line error messages parsable by adding an empty
+line after each one.(Bug# 1694)
 
 11/18/13: In eTomo - Coarse Alignment, added support for tiltxcorr parameters
 SearchMagChanges and ViewsWithMagChanges.(Bug# 1760)
